--- a/feature/home/src/main/res/layout/editor_fragment.xml
+++ b/feature/home/src/main/res/layout/editor_fragment.xml
@@ -5,9 +5,13 @@
     android:layout_height="match_parent"
     tools:context="marshi.memo.app.feature.editor.EditorFragment">
 
-    <TextView
+    <com.google.android.material.textfield.TextInputEditText
+        android:id="@+id/text_input_edit_text"
+        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="this is editor" />
+        android:gravity="top"
+        android:inputType="textMultiLine"
+        tools:text="テキストテキストテキストテキストテキストテキストテキストテキスト" />
 
 </FrameLayout>
