--- a/feature/home/src/main/res/navigation/nav_graph.xml
+++ b/feature/home/src/main/res/navigation/nav_graph.xml
@@ -12,9 +12,7 @@
         tools:layout="@layout/app_fragment">
         <action
             android:id="@+id/action_appFragment_to_editorFragment"
-            app:destination="@id/editorFragment"
-            app:enterAnim="@anim/fragment_open_enter"
-            app:exitAnim="@anim/fragment_open_exit" />
+            app:destination="@id/editorFragment" />
     </fragment>
 
     <fragment
