--- a/feature/home/src/main/res/layout/app_fragment.xml
+++ b/feature/home/src/main/res/layout/app_fragment.xml
@@ -35,6 +35,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
-        android:text="FAB"
-        android:layout_margin="16dp" />
+        android:layout_margin="16dp"
+        android:text="FAB" />
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
