--- a/feature/home/src/main/res/layout/editor_fragment.xml
+++ b/feature/home/src/main/res/layout/editor_fragment.xml
@@ -1,17 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="marshi.memo.app.feature.editor.EditorFragment">
 
-    <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/text_input_edit_memo_text"
-        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
+    <androidx.appcompat.widget.AppCompatEditText
+        android:id="@+id/edit_text"
+        style="@style/Widget.AppCompat.EditText"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="top"
         android:inputType="textMultiLine"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         tools:text="テキストテキストテキストテキストテキストテキストテキストテキスト" />
 
-</FrameLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
