--- a/feature/home/src/main/res/layout/editor_fragment.xml
+++ b/feature/home/src/main/res/layout/editor_fragment.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="marshi.memo.app.feature.editor.EditorFragment">
+    tools:context="dev.marshi.memo.feature.editor.EditorFragment">
 
     <androidx.appcompat.widget.AppCompatEditText
         android:id="@+id/edit_text"
