--- a/feature/home/src/main/res/layout/popup_menu.xml
+++ b/feature/home/src/main/res/layout/popup_menu.xml
@@ -7,7 +7,7 @@
     android:padding="8dp">
 
     <TextView
-        android:id="@+id/button1"
+        android:id="@+id/delete"
         style="@style/TextAppearance.MaterialComponents.Button"
         android:layout_width="match_parent"
         android:layout_height="40dp"
